--- a/sid-landing-site/package.json
+++ b/sid-landing-site/package.json
@@ -2,6 +2,15 @@
   "name": "sid-landing-site",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --watchAll",
+		"test:ci": "CI=true react-scripts test -w 1",
+    "eslint:check": "eslint --ext '.ts,.tsx,.js,.jsx' . && stylelint '**/*.scss'",
+		"eslint:fix": "eslint --ext '.ts,.tsx,.js,.jsx' . --fix && stylelint '**/*.scss' --fix",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -10,14 +19,6 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eslint:check": "eslint --ext '.ts,.tsx,.js,.jsx' . && stylelint '**/*.scss'",
-		"eslint:fix": "eslint --ext '.ts,.tsx,.js,.jsx' . --fix && stylelint '**/*.scss' --fix",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
