Runs OOD. Able to SSH. Rstudio and dash next.

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,10 +1,11 @@
 ARG SLURM_TAG
-ARG OOD_TAG
 
 FROM snkattck/slurm-docker-cluster:${SLURM_TAG}
 
+ARG OOD_TAG
+
 # Install Open On Demand, Singularity
-RUN yum install -y net-tools openssh-server openssh-clients && \
+RUN yum install -y net-tools openssh-clients && \
     yum install -y https://yum.osc.edu/ondemand/1.8/ondemand-release-web-${OOD_TAG}.noarch.rpm && \
     yum install -y epel-release centos-release-scl lsof sudo httpd24-mod_ssl httpd24-mod_ldap && \
     yum -y update && \
@@ -15,6 +16,9 @@ RUN yum install -y net-tools openssh-server openssh-clients && \
 COPY ./ood_portal.yml /etc/ood/config/ood_portal.yml
 RUN /opt/ood/ood-portal-generator/sbin/update_ood_portal && \
     systemctl enable httpd24-httpd && \
+    groupadd -g 3210 ood && \
+    useradd -u 3210 --create-home --gid ood ood && \
+    echo -n "ood" | passwd --stdin ood && \
     scl enable httpd24 -- htdbm -bc /opt/rh/httpd24/root/etc/httpd/.htpasswd.dbm ood ood
 
 COPY launch-httpd /usr/local/bin/
