--- a/dashboard/.gitignore
+++ b/dashboard/.gitignore
@@ -1,62 +1,84 @@
-*.gem
-*.rbc
-data
-/.config
-/coverage/
-log
 
+*.bridgesupport
+*.gem
+*.lcov
+*.log
+*.pid
+*.pid.lock
+*.rbc
+*.seed
+*.tgz
+*.tsbuildinfo
+.byebug_history
+.cache
+.cache/
+.dat*
+.dynamodb/
+.env
+.env.test
+.eslintcache
+.fusebox/
+.grunt
+.lock-wscript
+.next
+.node_repl_history
+.npm
+.nuxt
+.nyc_output
+.parcel-cache
+.pnp.*
+.repl_history
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.rvmrc
+.serverless/
+.tern-port
+.vscode-test
+.vuepress/dist
+.yarn-integrity
+.yarn/build-state.yml
+.yarn/cache
+.yarn/install-state.gz
+.yarn/unplugged
+/.bundle/
+/.config
+/.yardoc/
 /InstalledFiles
+/_yardoc/
+/coverage/
+/doc/
+/lib/bundler/man/
 /pkg/
-/spec/reports/
+/rdoc/
 /spec/examples.txt
+/spec/reports/
 /test/tmp/
-tmp
-public/assets
 /test/version_tmp/
 /tmp/
-
-# Used by dotenv library to load environment variables.
-# .env
-
-# Ignore Byebug command history file.
-.byebug_history
-
-## Specific to RubyMotion:
-.dat*
-.repl_history
-build/
-*.bridgesupport
+/vendor/bundle
+bin
+bower_components
 build-iPhoneOS/
 build-iPhoneSimulator/
-
-## Specific to RubyMotion (use of CocoaPods):
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# vendor/Pods/
-
-## Documentation cache and generated files:
-/.yardoc/
-/_yardoc/
-/doc/
-/rdoc/
-
-## Environment normalization:
-/.bundle/
-/vendor/bundle
-/lib/bundler/man/
-
-# for a library or gem, you might want to ignore these files since the code is
-# intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
-# .ruby-version
-# .ruby-gemset
-
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
-
-# Used by RuboCop. Remote config files pulled in from inherit_from directive.
-# .rubocop-https?--*
-
+build/
+build/Release
+coverage
+data
+dist
+jspm_packages/
+lerna-debug.log*
+lib-cov
+log
+logs
+node_modules/
+npm-debug.log*
+out
+pids
+public/assets
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+tmp
+web_modules/
+yarn-debug.log*
+yarn-error.log*
