* RStudio now works.   - Singularity needed to be pulled to /apps; there is no Singularity metadata registry. It's just a file.   - /home/ood/data needs to be bind mounted to OOD and all compute containers; thanks Aday for pointing this out. * Data directory should be chowned to 3210:3210

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -18,6 +18,8 @@ RUN /opt/ood/ood-portal-generator/sbin/update_ood_portal && \
     systemctl enable httpd24-httpd && \
     groupadd -g 3210 ood && \
     useradd -u 3210 --create-home --gid ood ood && \
+    mkdir -p /home/ood/ondemand/data && \
+    chown -R ood:ood /home/ood && \
     echo -n "ood" | passwd --stdin ood && \
     scl enable httpd24 -- htdbm -bc /opt/rh/httpd24/root/etc/httpd/.htpasswd.dbm ood ood
 
