--- a/dashboard/docker-compose.yml
+++ b/dashboard/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - etc_slurm:/etc/slurm
       - slurm_jobdir:/data
       - var_log_slurm:/var/log/slurm
+      - ./launchers/RStudio:/var/www/ood/apps/sys/RStudio
+      - ./data:/home/ood/ondemand/data:rw
       - .:/home/ood/ondemand/dev/sid2:rw
       - ./dev-cluster.yml:/etc/ood/config/clusters.d/dev-cluster.yml
     expose:
@@ -87,6 +89,7 @@ services:
       - etc_slurm:/etc/slurm
       - slurm_jobdir:/data
       - var_log_slurm:/var/log/slurm
+      - ./data:/home/ood/ondemand/data:rw
     expose:
       - "22"
       - "6818"
@@ -109,6 +112,7 @@ services:
       - etc_slurm:/etc/slurm
       - slurm_jobdir:/data
       - var_log_slurm:/var/log/slurm
+      - ./data:/home/ood/ondemand/data:rw
     expose:
       - "22"
       - "6818"
