--- a/dashboard/Dockerfile.node
+++ b/dashboard/Dockerfile.node
@@ -5,7 +5,7 @@ FROM snkattck/slurm-docker-cluster:${SLURM_TAG}
 ARG OOD_UID=3210
 ARG OOD_GID=3210
 
-RUN groupadd -g $OOD_GID ood && \
+RUN groupadd -g $OOD_GID ood || : && \
     useradd -u $OOD_UID --create-home --gid ood ood && \
     echo -n "ood" | passwd --stdin ood && \
     wget https://turbovnc.org/pmwiki/uploads/Downloads/TurboVNC.repo && \
