--- a/dashboard/Dockerfile.node
+++ b/dashboard/Dockerfile.node
@@ -6,7 +6,7 @@ ARG OOD_UID=3210
 ARG OOD_GID=3210
 
 RUN groupadd -g $OOD_GID ood || : && \
-    useradd -u $OOD_UID --create-home --gid ood ood && \
+    useradd -u $OOD_UID --create-home --gid $OOD_GID ood && \
     echo -n "ood" | passwd --stdin ood && \
     wget https://turbovnc.org/pmwiki/uploads/Downloads/TurboVNC.repo && \
     mv TurboVNC.repo /etc/yum.repos.d/ && \
