--- a/sid-landing-site/package.json
+++ b/sid-landing-site/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.12",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "serverless": "^1.47.0"
   }
 }
