--- a/sid-landing-site/package.json
+++ b/sid-landing-site/package.json
@@ -6,9 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll",
-		"test:ci": "CI=true react-scripts test -w 1",
+    "test:ci": "CI=true react-scripts test -w 1",
     "eslint:check": "eslint --ext '.ts,.tsx,.js,.jsx' . && stylelint '**/*.scss'",
-		"eslint:fix": "eslint --ext '.ts,.tsx,.js,.jsx' . --fix && stylelint '**/*.scss' --fix",
+    "eslint:fix": "eslint --ext '.ts,.tsx,.js,.jsx' . --fix && stylelint '**/*.scss' --fix",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "eslintConfig": {
     "extends": [
