--- a/dashboard/Dockerfile.node
+++ b/dashboard/Dockerfile.node
@@ -13,6 +13,7 @@ RUN groupadd -g $OOD_GID ood || : && \
     curl -L https://download2.rstudio.org/rstudio-server-rhel-1.1.463-x86_64.rpm -o rstudio-server-rhel-1.1.463-x86_64.rpm && \
     yum install -y epel-release && \
     yum install -y nc openssh-server turbovnc python-websockify nc R rstudio-server-rhel-1.1.463-x86_64.rpm && \
+    yum -y groupinstall 'MATE Desktop' && \
     mkdir -p /apps && \
     mkdir -p /run/sshd && \
     ssh-keygen -A && \
