--- a/dashboard/docker-compose.yml
+++ b/dashboard/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - slurm_jobdir:/data
       - var_log_slurm:/var/log/slurm
       - ./launchers/RStudio:/var/www/ood/apps/sys/RStudio
+      - ./launchers/odysseyrd:/var/www/ood/apps/sys/odysseyrd
       - ./data:/home/ood/ondemand/data:rw
       - .:/home/ood/ondemand/dev/dashboard:rw
       - ./dev-cluster.yml:/etc/ood/config/clusters.d/dev-cluster.yml
