Add deploy to qa

--- a/dashboard/Makefile
+++ b/dashboard/Makefile
@@ -6,11 +6,17 @@ all:: dev
 
 OOD_UID := $(shell id -u)
 OOD_GID := $(shell id -g)
+FASRC_USERNAME := $(if $(SSH_USERNAME),$(SSH_USERNAME),$(USER))
+FASRC_LOGIN_HOST := login.rc.fas.harvard.edu
 
 dev:
 
 	env SLURM_TAG=slurm-20-11-4-1 OOD_TAG=1.8-1 OOD_UID=$(OOD_UID) OOD_GID=$(OOD_GID) docker-compose down -v || :
 	env SLURM_TAG=slurm-20-11-4-1 OOD_TAG=1.8-1 OOD_UID=$(OOD_UID) OOD_GID=$(OOD_GID) docker-compose up --build
+
+qa:
+	ssh $(FASRC_USERNAME)@$(FASRC_LOGIN_HOST) mkdir -p ./fasrc/dev/dashboard || :
+	rsync -avz . -e ssh $(FASRC_USERNAME)@$(FASRC_LOGIN_HOST):./fasrc/dev/dashboard
 
 down:
 
@@ -19,4 +25,5 @@ down:
 up:
 
 	env SLURM_TAG=slurm-20-11-4-1 OOD_TAG=1.8-1 OOD_UID=$(OOD_UID) OOD_GID=$(OOD_GID) docker-compose up --build
+
  
