--- a/dashboard/application/config/launchers/sas.yml
+++ b/dashboard/application/config/launchers/sas.yml
@@ -20,4 +20,4 @@ view:
   style: "margin-top: 3px"
   p1: "Run SAS"
   p2: "1 CPU core and 4GB RAM"
-  p3: "[4hr] Job run time"
+  p3: "[4 hours] Job run time"
