DevOpsProjects#391: Updated launchers runtime text to match design

--- a/dashboard/application/config/launchers/stata.yml
+++ b/dashboard/application/config/launchers/stata.yml
@@ -21,4 +21,4 @@ view:
   style: "margin-top: 15px;"
   p1: "Run Stata"
   p2: "1 CPU core and 8GB RAM"
-  p3: "[4 hours] Job run time"
+  p3: "4 hours job run time"
