--- a/dashboard/application/config/launchers/rstudio.yml
+++ b/dashboard/application/config/launchers/rstudio.yml
@@ -21,4 +21,4 @@ view:
   logoWidth: "200"
   p1: "Run Rstudio Server"
   p2: "2 CPU cores and 4GB RAM"
-  p3: "[4 hours] Job run time"
+  p3: "4 hours job run time"
