DevOpsProjects#399: Added configuration for GitHub actions for release build

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,7 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Dashboard directory
-        run: cd dashboard
       - name: Run release step
+        working-directory: ./dashboard
         run: make release
