--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,12 +15,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Creates build
         working-directory: ./dashboard
-        run: SID_TAG=${{ github.event.inputs.logLevel }} make release
+        run: make release
       - name: Commits release
         run: |
           git config --global user.name 'CI Pipeline'
           git config --global user.email 'ci-pipeline@users.noreply.github.com'
-          git checkout -b release_${{ github.event.inputs.logLevel }}
-          git add ./deployment/sid_passenger/files/application -f
-          git commit -m "Release release_${{ github.event.inputs.logLevel }}"
-          git push origin release_${{ github.event.inputs.logLevel }}
+          git checkout -b release_${{ github.event.inputs.tag }}
+          git add ./dashboard/deployment/sid_passenger/files/application -f
+          git commit -m "Release release_${{ github.event.inputs.tag }}"
+          git push origin release_${{ github.event.inputs.tag }}
