DevOpsProjects#391: Fixed typo on sid dashboard application manifest

--- a/dashboard/application/manifest.yml
+++ b/dashboard/application/manifest.yml
@@ -1,4 +1,4 @@
 ---
 name: Sid Dashboard
 description: Sid landing page with quick launcher buttons
-Category: Sid Dashboard
+category: Sid Dashboard
