--- a/dashboard/application/config/launchers/rstudio.yml
+++ b/dashboard/application/config/launchers/rstudio.yml
@@ -21,6 +21,7 @@ form:
 view:
   logo: "rstudio_logo.png"
   logoWidth: "200"
+  style: "margin-top: 10px;"
   p1: "Run Rstudio Server"
   p2: "2 CPU cores and 4GB RAM"
   p3: "8 hours job run time"
