--- a/dashboard/application/launchers/Rstudio/launch_button.yml
+++ b/dashboard/application/launchers/Rstudio/launch_button.yml
@@ -18,7 +18,7 @@ form:
 
 view:
   logoWidth: "200"
-  style: ""
+  style: "margin-top: 10px;"
   p1: "Run Rstudio Server"
   p2: "2 CPU cores and 4GB RAM"
   p3: "6 hours job run time"
