--- a/keycloak-radius-spi/pom.xml
+++ b/keycloak-radius-spi/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iqss.keycloak</groupId>
+    <groupId>edu.harvard.iq.keycloak</groupId>
     <artifactId>keycloak-radius-spi</artifactId>
     <version>1.0</version>
 
