feature(keycloak-radius-spi) GH #482 Added basic functionality for Keycloak Radius Authenticator

--- a/keycloak-radius-spi/pom.xml
+++ b/keycloak-radius-spi/pom.xml
@@ -42,6 +42,11 @@
             <version>3.0.24.Final</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.tinyradius</groupId>
+            <artifactId>tinyradius</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
+        </dependency>
         <!-- TEST DEPENDENCIES -->
         <dependency>
             <groupId>junit</groupId>
