feature(keycloak-radius-spi) GH #482 Fixed missing library when running utility to check Radius connectivity

--- a/keycloak-radius-spi/pom.xml
+++ b/keycloak-radius-spi/pom.xml
@@ -97,6 +97,7 @@
                         <phase>clean</phase>
                         <configuration>
                             <file>${basedir}/libs/tinyradius-1.1.1.jar</file>
+                            <pomFile>${basedir}/libs/tinyradius-1.1.1.pom</pomFile>
                             <repositoryLayout>default</repositoryLayout>
                             <groupId>org.tinyradius</groupId>
                             <artifactId>tinyradius</artifactId>
