feature(keycloak-radius-spi) GH #508 Improved build script by using a maven repo local to the project

--- a/keycloak-radius-spi/pom.xml
+++ b/keycloak-radius-spi/pom.xml
@@ -16,6 +16,13 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <keycloak.version>13.0.1</keycloak.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>maven-local-repo</id>
+            <name>Maven local repository</name>
+            <url>file://maven-local-repo</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
