--- a/keycloak-radius-spi/Makefile
+++ b/keycloak-radius-spi/Makefile
@@ -9,16 +9,16 @@ BUILD_COMMAND := mvn -Dmaven.repo.local=maven-local-repo clean && mvn -Dmaven.re
 TEST_COMMAND := mvn -Dmaven.repo.local=maven-local-repo clean && mvn -Dmaven.repo.local=maven-local-repo test
 
 build:
-	docker run -it --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(BUILD_COMMAND)"
+	docker run --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(BUILD_COMMAND)"
 
 dev:
-	docker run -it --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(BUILD_COMMAND)"
+	docker run --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(BUILD_COMMAND)"
 	docker-compose up --build
 
 reset:
-	docker run -it --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(BUILD_COMMAND)"
+	docker run --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(BUILD_COMMAND)"
 	docker-compose down -v || :
 	docker-compose up --build
 
 ci:
-	docker run -it --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(TEST_COMMAND)"
+	docker run --rm -v $(WORKING_DIR):/usr/local/app -w /usr/local/app maven:3-openjdk-11 /bin/bash -c "$(TEST_COMMAND)"
