--- a/.github/workflows/dashboard-ci.yml
+++ b/.github/workflows/dashboard-ci.yml
@@ -1,4 +1,4 @@
-name: continous-integration
+name: dashboard-ci
 
 on:
   push:
@@ -9,10 +9,11 @@ on:
       - 'dashboard/**'
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout ${{ github.sha }}
+        uses: actions/checkout@v2
       - name: Build and Tests
         working-directory: ./dashboard
         run: make test
