--- a/.github/workflows/spi-ci.yml
+++ b/.github/workflows/spi-ci.yml
@@ -1,6 +1,7 @@
-name: continous-integration
+name: keycloak-spi-ci
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - canary
@@ -9,10 +10,18 @@ on:
       - 'keycloak-radius-spi/**'
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout ${{ github.sha }}
+        uses: actions/checkout@v2
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ./main/keycloak-radius-spi/maven-local-repo
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
       - name: Build and Tests
-        working-directory: ./keycloack-radius-spi
-        run: make docker-build
+        working-directory: ./keycloak-radius-spi
+        run: make ci
