fix(build): add pre-release flag

--- a/.release-it.json
+++ b/.release-it.json
@@ -10,7 +10,8 @@
     }
   },
   "git": {
-    "requireCleanWorkingDir": false
+    "requireCleanWorkingDir": false,
+    "preRelease": true
   },
   "github": {
     "release": true,
