--- a/.github/workflows/dashboard-ci.yml
+++ b/.github/workflows/dashboard-ci.yml
@@ -1,16 +1,19 @@
-name: continous-integration
+name: dashboard-ci
 
 on:
   push:
     branches:
       - canary
       - stable
+    paths:
+      - 'dashboard/**'
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout ${{ github.sha }}
+        uses: actions/checkout@v2
       - name: Build and Tests
         working-directory: ./dashboard
         run: make test
