feat(build): implement build and release modifications
This commit will produce two workflows, a build-test workflow and release workflow. The
latter is only executed when the former succeeds from a push to the stable repository.

Node version requirement in .node-version, which GitHub actions reads from during the
release process.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: keycloak-spi-ci
+name: build-and-test
 
 on:
   workflow_dispatch:
@@ -6,11 +6,17 @@ on:
     branches:
       - canary
       - stable
-    paths:
-      - 'keycloak-radius-spi/**'
 
 jobs:
-  build-and-test:
+  build-and-test-dashboard:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout ${{ github.sha }}
+        uses: actions/checkout@v2
+      - name: Build and test
+        working-directory: ./dashboard
+        run: make test
+  build-and-test-keycloak:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout ${{ github.sha }}
@@ -22,6 +28,6 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Build and Tests
+      - name: Build and test
         working-directory: ./keycloak-radius-spi
         run: make ci
