--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["build-and-test"]
     branches: [stable]
-    types: 
+    types:
       - completed
 
 permissions:
@@ -22,12 +22,10 @@ jobs:
         run: make release
       - name: Upload release artifact
         uses: actions/upload-artifact@v2
-        working-directory:  ./dashboard/target
         with:
           name: spi-release-artifact
           retention-days: 1
-          path: |
-          ./sid2-dashboard.tar.gz
+          path: ./dashboard/target/sid2-dashboard.tar.gz
   create-release-keycloak-spi:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -49,33 +47,32 @@ jobs:
         with:
           name: spi-release-artifact
           retention-days: 1
-          path: |
-          ./keycloak-radius-spi/target/keycloak-radius-spi-jar-with-dependencies.jar
-    make-logical-release:
-      runs-on: ubuntu-latest
-      needs: [ create-release-keycloak-spi, create-release-dashboard ]
-      name: Making release
-      steps:
-        - uses: actions/checkout@v2
-          with:
-            fetch-depth: 0
-        - name: Read .node_version
-          run: echo ::set-output name=NODE_VERSION::$(cat .node-version)
-          id: node_version
-        - name: Setup node
-          uses: actions/setup-node@v2
-          with:
-            node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
-        - name: git config
-          run: |
-            git config user.name "${GITHUB_ACTOR}"
-            git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        - run: |
+          path: ./keycloak-radius-spi/target/keycloak-radius-spi-jar-with-dependencies.jar
+  make-logical-release:
+    runs-on: ubuntu-latest
+    needs: [create-release-keycloak-spi, create-release-dashboard]
+    name: Making release
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Read .node_version
+        run: echo ::set-output name=NODE_VERSION::$(cat .node-version)
+        id: node_version
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
+      - name: git config
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      - run: |
           mkdir -p ./target
           npm install
-        - uses: actions/download-artifact@v2
-          with:
-            path: ./target
-        - run: npm run release -- --ci
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/download-artifact@v2
+        with:
+          path: ./target
+      - run: npm run release -- --ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
