--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@csmith/release-it-calver-plugin": "^2021.5.7",
+    "@release-it/conventional-changelog": "^3.1.0",
     "husky": "^7.0.1",
     "release-it": "^14.11.3"
   }
