--- a/dashboard/application/config/launchers/rstudio.yml
+++ b/dashboard/application/config/launchers/rstudio.yml
@@ -15,8 +15,8 @@ form:
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  r_version:	"R/4.0.5-fasrc01"
-  rlibs: ""
+  r_version: "R/4.1.0-fasrc01"
+  rlibs: "~/apps/R_4.1.0_fasrc01"
   custom_vanillaconf: "1"
 
 view:
